syntax = "proto3";
option go_package=".;protocols";
package protocols;

// PubkeyMsg 公钥
message PubkeyMsg {
    string Key = 1;
} 